--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <!-- fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Karla:400,700|Open+Sans:400,600,700&display=swap"
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap"
         rel="stylesheet">
   <!-- /fonts -->
 </head>
