--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
             </div>
           </a>
 
-          <div class="dropdown-menu dropdown-menu-right notification-dropdown" aria-labelledby="notificationMenuButton">
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="notificationMenuButton">
             <a href="#">
               <h6 class="dropdown-header">Dropdown Default</h6>
               <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
