--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
 </head>
 
 <body>
+<div class="peek"></div>
+
 <header class="header">
   <div class="container container-lg">
     <div class="d-flex flex-row align-items-center justify-content-center justify-content-md-between">
@@ -198,7 +200,7 @@
   </section>
 
   <section class="tile-list">
-    <div class="container p-0">
+    <div class="container">
       <div class="tile-row">
         <div class="tile tile-blue tile-chart">
           <div class="tile-card text-center text-sm-left align-items-start">
@@ -614,7 +616,7 @@
       </div>
 
       <div class="footer-form">
-        <form action="/" autocomplete="on">
+        <form action="index.html" autocomplete="on">
           <p class="footer-form-title">Get our newsletter</p>
 
           <div class="form-group">
